# cad-cae-copilot

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  AGENT_WORKBOOK.md  Agent.md  CHANGELOG_DEVELOPMENT.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  commit_msg.tmp  dev.ps1  docker-compose.yml  issue_body.tmp.md  pr267_review.diff  run-aieng-mcp.cmd
aieng/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  G10_G11_ANALYSIS.md  LICENSE  README.md  pyproject.toml
aieng-freecad-mcp/: .gitignore  AGENTS.md  README.md  pyproject.toml
aieng-freecad-mcp/docs/: acceptance_tests.md  freecad_execution_policy.md  known_limitations.md  mvp-1-plan.md  product_boundary.md  release_checklist.md  release_v1_demo.md  roadmap.md  security_policy.md  tool_contract.md
aieng-freecad-mcp/schemas/: freecad_capabilities.schema.json  operation_result.schema.json  tool_result.schema.json
aieng-freecad-mcp/scripts/: create_parametric_bracket_fcstd.py  run_aieng_patch_demo.py  run_postprocessing_demo.py  run_reference_mapping_demo.py  run_v1_end_to_end_demo.py
aieng-freecad-mcp/tests/: test_aieng_patch.py  test_aieng_runtime_client.py  test_cae_mcp.py  test_claims.py  test_computed_metrics_exporter.py  test_freecad_modeling_backend.py  test_geometry_inspector.py  test_milestone1_acceptance_dryrun.py  test_planner.py  test_real_freecad_patch_integration.py  test_real_solver_integration.py  test_recommendation_bridge.py  test_runtime_mcp_tools.py  test_stub_executor.py  test_tool_registry.py
aieng-ui/backend/: AGENTS.md  MCP_SETUP.md  pyproject.toml  step1.json  step2.json  step2b.json
aieng/.github/: REPO_TOPICS.md
aieng/analysis/: aieng_benchmark_upgrade_proposal.md  aieng_borrowing_candidates.md  aieng_reference_notation_proposal.md  aieng_viewer_mvp_proposal.md  risk_register.md  text_to_cad_comparison.md
aieng/benchmark_runs/: leaderboard.md
aieng/benchmarks/: README.md  aieng_expected_capabilities.md  questions.md  raw_step_expected_limitations.md  results.schema.json  run_manual_benchmark.md  scoring_rubric.md
aieng/docs/: adapter_capability_declarations.json  agent_guided_optimization_direction.md  agent_guided_optimization_issues.md  agi_handoff_walkthrough.md  ai_understanding_benchmark.md  aieng-gallery-milestone-0-spec.md  amrto_pytocad_evaluation.md  amrto_pytocad_spike_status.md  architecture.md  assembly_contact_spike.md  backend_artifact_reference.md  backend_capability_matrix.md  benchmark_design.md  benchmark_methodology.md  cad_cae_conversion_contract.md  cad_cae_emitter_contract.md  cad_parameter_mutation_contract.md  cae_deck_assembler_contract.md  cae_result_contract.md  command_reference.md  core_position.md  demo_catalog.md  demo_walkthrough.md  derived_artifact_discipline.md  design_targets.md  development_log.md  future_package_structure.md  geometry_backend_contract.md  interop_standards_matrix.md  issue_closure_action_plan.md  issue_coverage_inventory.md  issue_standardization_complete_summary.md  issue_standardization_record.md  leap71_research_notes.md  mcp_server.md  modeling_plan_contract.md  mvp_checkpoint.md  nafems_vv_cases.md  nafems_vv_posture.md  ocp_topology_demo.md  (+25 more)
aieng/examples/: bracket.step  bracket_assembly_def.yaml  bracket_cae_mapping.yaml  bracket_loadcase.inp  bracket_user_context.yaml  definition_flange_001.yaml  definition_plate_with_pattern.yaml  definition_simple_bracket.yaml  package_semantics_cookbook.py  real_bracket_user_context.yaml
aieng/issues/: boundary_c5_no_arbitrary_brep_editing.md  boundary_c6_no_rendering_gltf_in_core.md  phase_17a_real_step_stabilization.md  phase_17b_mesh_handoff_completeness.md  phase_18_benchmark_refresh.md  phase_18_optional_viewer.md  phase_18_reference_system.md  phase_18c_semantic_coverage_benchmark.md  phase_19_c1_real_feature_recognition_quality.md  phase_19_c2_writeback_breadth_expansion.md  phase_19_c3_allowed_operation_catalog.md  phase_19_c4_consolidated_validation_view.md  phase_36_closed_loop_benchmark.md
aieng/schemas/: claim_map.schema.json  completeness_report.schema.json  constraints.schema.json  conversion_manifest.schema.json  design_targets.schema.json  evidence_index.schema.json  evidence_report.schema.json  feature_graph.schema.json  field_summary.schema.json  interface_graph.schema.json  manifest.schema.json  model_definition.schema.json  nafems_vv_report.schema.json  optimization_constraints.schema.json  optimization_decision_log.schema.json  optimization_study.schema.json  optimization_variables.schema.json  pareto_front.schema.json  parsed_cae_loads.schema.json  protected_regions.schema.json  task_spec.schema.json  tool_trace.schema.json  visual_annotation_layers.schema.json
aieng/scripts/: generate_real_bracket_step.py  generate_sample_fcstd.py  prepare_flange_benchmark_pack.py  prepare_negative_test_fixtures.py  prepare_plate_with_pattern_benchmark_pack.py  prepare_real_benchmark_pack.py  run_benchmark.py  run_ocp_topology_demo.py  run_real_step_demo.py  run_reference_demo.py  run_topology_sizing_demo.py  validate_benchmark_scenario.py
aieng/tests/: _geometry_capability.py  conftest.py  test_aag.py  test_adapter_capability_conformance.py  test_adapter_tool_trace_conformance.py  test_allowed_operations_catalog.py  test_apply_cae_mapping.py  test_apply_context.py  test_assembly_authoring.py  test_assembly_bolt_preload.py  test_assembly_cae.py  test_assembly_contact_spike.py  test_assembly_graph.py  test_assembly_interface_resolution.py  test_assembly_ir.py  test_assembly_mesh_diagnostics.py  test_assembly_multipart_topopt.py  test_assembly_topopt.py  test_async_utils.py  test_audit_event.py  test_backend_discovery.py  test_backend_protocol.py  test_backend_stability_gate.py  test_benchmark_run_package.py  test_benchmarks.py  test_benchmarks_analytical_fea.py  test_cad_brief.py  test_cae_artifact_detector.py  test_cae_interface_graph_enrichment.py  test_cae_preprocessing_summary.py  test_cae_recommendation.py  test_cae_result_map.py  test_cae_result_summary.py  test_cae_simulation_run_summary.py  test_cae_verification.py  (+146 more)
(+1289 files in other folders)
